step2 반복컨텐츠

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>React App</title>
+	<title>Music player</title>
+	<script src="https://kit.fontawesome.com/03fd15ad3b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
